--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Neha's Word Guess Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <script src="javascript/game.js"></script>
 </head>
 <body>
     
-    
+
 
 </body>
 </html>
