--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,25 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="assets/javascript/game.js"></script>
 </head>
+
 <body>
     <h1>Guess the element!</h1>
-    <p id="unknown"></p>
-    <p id="incorrect"></p>
-<!-- Chemistry Theme -->
+
+    <div class="container">
+        <p id="unknown"></p>
+        <p id="rightLetters"></p>
+        <p id="incorrect"></p>
+        <br>
+        <hr>
+        <p>Guesses remaining: <span id="guessesRemaining"></span></p>
+        <p># of Wins: <span id="wins"></span></p>
+        <p># of Losses: <span id="losses"></span></p>
+
+
+    </div>
+
+    <!-- Chemistry Theme -->
 
 </body>
+
 </html>
