--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Viga" rel="stylesheet">
     <script src="assets/javascript/game.js"></script>
 </head>
 
 <body>
-    <h1>Guess the element!</h1>
-
     <div class="container">
+        <h1>Guess the element!</h1>
+        <h3>(Press any key to get started)</h3>
+
+
         <p id="unknown"></p>
         <p id="rightLetters"></p>
+        <br>
         <p id="incorrect"></p>
         <br>
         <hr>
