--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>(Press any key to get started)</h3>
         <br>
 
-        <img id="image" alt="" style="align-content: center;">
+        <img id="image" alt="">
         <br>
         <p id="unknown"></p>
         <!-- <p id="rightLetters"></p> -->
