--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav> -->
 
     <div class="container">
-        <h1>Guess the element!</h1>
+        <h1>Guess the Element!</h1>
         <h3>(Press any key to get started)</h3>
         <br>
 
