--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 
@@ -40,10 +41,10 @@
         <img id="image" alt="">
         <br>
         <p id="unknown"></p>
-        <!-- <p id="rightLetters"></p> -->
         <br>
         <p id="incorrect"></p>
         <br>
+        <button type="button" class="btn btn-primary btn-lg" id="hint">HINT</button>
         <hr>
         <p>Guesses remaining: <span id="guessesRemaining"></span></p>
         <p># of Wins: <span id="wins"></span></p>
@@ -54,6 +55,17 @@
 
     <!-- Chemistry Theme -->
 
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+
+            $("#hint").on("click", function() {
+                alert("No hint for you!");
+            });
+
+
+        });
+        </script>
 </body>
 
 </html>
