--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 
@@ -38,7 +38,7 @@
         <h3>(Press any key to get started)</h3>
         <br>
 
-        <img id="image" alt="">
+        <img src="" id="image" alt="">
         <br>
         <p id="unknown"></p>
         <br>
@@ -57,15 +57,15 @@
 
     <script type="text/javascript">
 
-        $(document).ready(function() {
+        $(document).ready(function () {
 
-            $("#hint").on("click", function() {
+            $("#hint").on("click", function () {
                 alert("No hint for you!");
             });
 
 
         });
-        </script>
+    </script>
 </body>
 
 </html>
